--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/coppeliasim_HWInterface
+script-dir=$base/lib/ur_coppeliasim
 [install]
-install-scripts=$base/lib/coppeliasim_HWInterface
+install-scripts=$base/lib/ur_coppeliasim
