take rviz file from this package instead from the controllers package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ install(
 )
 
 install(
-  DIRECTORY launch urdf meshes config
+  DIRECTORY launch urdf meshes config rviz
   DESTINATION share/ur_coppeliasim
 )
 
